--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
 
     <script>
         // 后端 API 地址 - 在部署到 Vercel 后更新这个
-        const API_URL = 'https://your-vercel-project.vercel.app/api/auction';
+        const API_URL = 'https://property-auction.vercel.app/api/auction';
 
         const properties = [
             {
